<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/summary_bg" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:textColor="@color/grey" android:text="@string/txt_businesstime" android:layout_weight="1.0" />
        <TextView android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:textColor="@color/grey" android:text="@string/txt_businessprice" android:layout_weight="1.0" />
        <TextView android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:textColor="@color/grey" android:text="@string/txt_businessamount" android:layout_weight="1.0" />
        <TextView android:gravity="left" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
 
    <com.geniusgithub.bcoinmonitor.widget.RefreshListView 
	  android:id="@+id/trade_list_view"
      android:layout_height="fill_parent"
      android:layout_width="fill_parent" 
      android:headerDividersEnabled="false" 
      android:layout_weight="1.0"
      android:dividerHeight="0.0dp" 
      android:divider="@null"
      android:cacheColorHint="#00000000"
      android:clickable="false"
      android:listSelector="@android:color/transparent"  />
          
</LinearLayout>