<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:background="@color/window_bg" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"/>
    
    <LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:gravity="center">
       
          <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:src="@drawable/icon">	                
          </ImageView>
                   
          <TextView
          android:id="@+id/tv_version"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginTop="10dp"
	      android:text="比特币大亨"
	      android:textColor="#888888"
	      android:textSize="20sp" />
   </LinearLayout>

    <LinearLayout
        style="@style/leba_bg_layout">
        <!--  检查更新 	-->
        <LinearLayout
            android:id="@+id/ll_checkupdate"
            style="@style/leba_bg_top_layout" >
            <TextView android:textSize="16.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/txt_checkupdate" android:layout_weight="1.0" />
            <ImageView android:id="@+id/iv_updateicon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/app_new" android:visibility="gone"/>
        </LinearLayout>


        <View android:background="@drawable/leba_shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />

        <!--  版权信息 	-->
        <LinearLayout
            android:id="@+id/ll_copyRight"
            style="@style/leba_bg_mid_layout">
            <TextView android:textSize="16.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/txt_copyright" android:layout_weight="1.0" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow" />
        </LinearLayout>

        <View android:background="@drawable/leba_shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />


        <!--  帮助	-->
        <LinearLayout
            android:id="@+id/ll_help"
            style="@style/leba_bg_bottom_layout">
            <TextView android:textSize="16.0dip" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/txt_help" android:layout_weight="1.0" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_marginBottom="10dp"
		    android:layout_alignParentBottom="true">
		        
		        <TextView
		        android:id="@+id/tv_bottom"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_alignParentBottom="true"
		    	android:gravity="center"
		    	android:textColor="#666666"
		    	android:text="@string/about_bottom">		            
		        </TextView>
		        
		        <TextView
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_above="@id/tv_bottom"
		    	android:gravity="center"
		    	android:ellipsize="marquee" 
				android:singleLine="true"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:scrollHorizontally="true"
				android:marqueeRepeatLimit="marquee_forever"	
		    	android:textColor="@color/royalblue"
		    	android:text="@string/about_connect">            
		        </TextView>

	</RelativeLayout>
</LinearLayout>
